--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,18 @@
-.videoContainer {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+@import "tailwindcss";
+
+
+/* Ghoomne wala animation define kiya */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  transform: translate(-50%, -50%);
-  object-fit: cover;
-  z-index: -2; /* Video sabse neeche rahegi */
-}
-
-.videoContainer::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(24, 24, 24, 0.941); /* Semi-transparent black overlay */
-  z-index: -1; /* Video ke upar par content ke peeche rahegi */
-}
-
-.contentOverlay {
-  position: relative;
-  z-index: 1; /* Content sabse upar rahega */
-  /* Yahaan par aap apne content ki styling daal sakte hain */
-  color: white;
-  text-align: center;
-  padding-top: 200px;
+.spinning-loader {
+  animation: spin 2s linear infinite;
+  color: #3498db;
 }
